--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ashik Nirob</title>
   </head>
   <body>
-<h1>Hello, Code School!.</h1>
+<h1>Hello, Code School!</h1>
 <ul>
 <li>he skills you want to learn.</li>>
 <li>he skills you want to learn.</li>
